--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
 <label>Kode Klasifikasi</label><br>
 <input type="text" id="kodeKlasifikasi"><br><br>
+<input type="text" id="kodeMaster" placeholder="Kode Klasifikasi Master">
+
+<input type="text" id="kodeKlasifikasi" placeholder="Kode Klasifikasi">
 
 <label>Indeks 1</label><br>
 <input type="text" id="indeks1"><br><br>
@@ -73,4 +76,5 @@
 
 </body>
 </html>
+
 
