--- a/index.html
+++ b/index.html
@@ -3,76 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>Arsip Dinamis</title>
-  <style>
-    body { font-family: Arial, sans-serif; }
-    input, select { margin: 4px; padding: 4px; }
-    table { border-collapse: collapse; margin-top: 20px; width: 100%; }
-    th, td { border: 1px solid #000; padding: 6px; font-size: 12px; }
-    th { background: #eee; }
-  </style>
 </head>
 <body>
 
 <h2>Input Arsip Dinamis</h2>
 
-<!-- FORM INPUT -->
-<input id="noBerkas" placeholder="No. Berkas">
-<input id="kodeMaster" placeholder="Kode Klasifikasi Master">
-<input id="kodeKlasifikasi" placeholder="Kode Klasifikasi">
-<input id="indeks1" placeholder="Indeks 1">
-<input id="indeks2" placeholder="Indeks 2">
-<input id="noItem" placeholder="No. Item Arsip">
-<input id="nomorSurat" placeholder="Nomor Surat Tugas">
-<input id="diberikanKepada" placeholder="Diberikan Kepada">
-<input id="tanggalSurat" type="date">
-<input id="tanggal" type="date">
-<input id="tingkat" placeholder="Tingkat Perkembangan">
-<input id="jumlah" placeholder="Jumlah">
-<input id="unit" placeholder="Unit Pengolah Arsip">
-<input id="retensiAktif" placeholder="Retensi Aktif">
-<input id="retensiInaktif" placeholder="Retensi Inaktif">
-<input id="statusAkhir" placeholder="Status Akhir Arsip">
-<input id="sistem" placeholder="Sistem Klasifikasi">
-<input id="rak" placeholder="No. Rak">
-<input id="box" placeholder="No. Box">
-<input id="folder" placeholder="No. Folder">
-<input id="keterangan" placeholder="Keterangan">
+<input id="noBerkas" placeholder="No. Berkas"><br><br>
+<input id="kodeMaster" placeholder="Kode Klasifikasi Master"><br><br>
+<input id="kodeKlasifikasi" placeholder="Kode Klasifikasi"><br><br>
+<input id="indeks1" placeholder="Indeks 1"><br><br>
+<input id="indeks2" placeholder="Indeks 2"><br><br>
 
-<br><br>
-<button onclick="simpanData()">Simpan Data</button>
+<button onclick="simpanData()">Simpan</button>
 
-<!-- TABEL HASIL -->
-<table id="tabelArsip">
+<hr>
+
+<table border="1" cellpadding="5">
   <thead>
     <tr>
       <th>No. Berkas</th>
-      <th>Kode Klasifikasi Master</th>
+      <th>Kode Master</th>
       <th>Kode Klasifikasi</th>
       <th>Indeks 1</th>
       <th>Indeks 2</th>
-      <th>No. Item Arsip</th>
-      <th>Nomor Surat Tugas</th>
-      <th>Diberikan Kepada</th>
-      <th>Tanggal Surat</th>
-      <th>Tanggal</th>
-      <th>Tingkat Perkembangan</th>
-      <th>Jumlah</th>
-      <th>Unit Pengolah Arsip</th>
-      <th>Retensi Aktif</th>
-      <th>Retensi Inaktif</th>
-      <th>Status Akhir Arsip</th>
-      <th>Sistem Klasifikasi</th>
-      <th>No. Rak</th>
-      <th>No. Box</th>
-      <th>No. Folder</th>
-      <th>Keterangan</th>
     </tr>
   </thead>
-  <tbody></tbody>
+  <tbody id="tabelData">
+  </tbody>
 </table>
-
-<br>
-<button onclick="exportCSV()">Export ke Excel (CSV)</button>
 
 <script src="script.js"></script>
 </body>
