--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <h2>Input Arsip Dinamis</h2>
 
 <input id="noBerkas" placeholder="No. Berkas"><br><br>
-<input id="kodeMaster" placeholder="Kode Klasifikasi Master"><br><br>
+<select id="kodeMaster">
+  <option value="">-- Pilih Kode Klasifikasi Master --</option>
+  <option value="PR">PR</option>
+  <option value="TU">TU</option>
+</select>
+<br><br>
+
 <input id="kodeKlasifikasi" placeholder="Kode Klasifikasi"><br><br>
 <input id="indeks1" placeholder="Indeks 1"><br><br>
 <input id="indeks2" placeholder="Indeks 2"><br><br>
@@ -35,3 +41,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
