--- a/index.html
+++ b/index.html
@@ -3,28 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <title>Arsip Dinamis</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+    }
+    input, select, button {
+      margin: 4px 0;
+      padding: 6px;
+      width: 300px;
+    }
+    table {
+      border-collapse: collapse;
+      margin-top: 20px;
+      width: 100%;
+      font-size: 12px;
+    }
+    th, td {
+      border: 1px solid #000;
+      padding: 6px;
+    }
+    th {
+      background: #eee;
+    }
+  </style>
 </head>
 <body>
 
 <h2>Input Arsip Dinamis</h2>
 
-<input id="noBerkas" placeholder="No. Berkas"><br><br>
+<!-- FORM INPUT -->
+<input id="noBerkas" placeholder="No. Berkas">
+
+<br>
+
 <select id="kodeMaster">
   <option value="">-- Pilih Kode Klasifikasi Master --</option>
   <option value="PR">PR</option>
   <option value="TU">TU</option>
 </select>
+
+<br>
+
+<input id="kodeKlasifikasi" placeholder="Kode Klasifikasi (PR.03.02.a dll)">
+<input id="indeks1" placeholder="Indeks 1">
+<input id="indeks2" placeholder="Indeks 2">
+
 <br><br>
 
-<input id="kodeKlasifikasi" placeholder="Kode Klasifikasi"><br><br>
-<input id="indeks1" placeholder="Indeks 1"><br><br>
-<input id="indeks2" placeholder="Indeks 2"><br><br>
+<button onclick="simpanData()">Simpan Data</button>
 
-<button onclick="simpanData()">Simpan</button>
-
-<hr>
-
-<table border="1" cellpadding="5">
+<!-- TABEL HASIL -->
+<table>
   <thead>
     <tr>
       <th>No. Berkas</th>
@@ -34,8 +64,7 @@
       <th>Indeks 2</th>
     </tr>
   </thead>
-  <tbody id="tabelData">
-  </tbody>
+  <tbody id="tabelData"></tbody>
 </table>
 
 <script src="script.js"></script>
