--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 <input id="kodeKlasifikasi" placeholder="Kode Klasifikasi (PR.03.02.a dll)">
 <input id="indeks1" placeholder="Indeks 1">
 <input id="indeks2" placeholder="Indeks 2">
+  <input id="nomorSurat" placeholder="Nomor Surat Tugas">
+<input id="diberikanKepada" placeholder="Diberikan Kepada">
+<input id="tanggalSurat" type="date">
+
 
 <br><br>
 
@@ -62,6 +66,10 @@
       <th>Kode Klasifikasi</th>
       <th>Indeks 1</th>
       <th>Indeks 2</th>
+      <th>Nomor Surat Tugas</th>
+<th>Diberikan Kepada</th>
+<th>Tanggal Surat</th>
+
     </tr>
   </thead>
   <tbody id="tabelData"></tbody>
@@ -70,4 +78,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
