--- a/index.html
+++ b/index.html
@@ -4,84 +4,69 @@
   <meta charset="UTF-8">
   <title>Input Arsip Dinamis</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      padding: 20px;
-    }
-    input, select, button {
-      width: 300px;
-      padding: 6px;
-      margin: 5px 0;
-    }
-    table {
-      border-collapse: collapse;
-      margin-top: 20px;
-      width: 100%;
-      font-size: 12px;
-    }
-    th, td {
-      border: 1px solid #000;
-      padding: 6px;
-      text-align: left;
-    }
-    th {
-      background-color: #eee;
-    }
+    body { font-family: Arial, sans-serif; font-size: 14px; padding: 20px; }
+    input, select, button { width: 300px; padding: 6px; margin: 5px 0; }
+    table { border-collapse: collapse; margin-top: 20px; width: 100%; font-size: 12px; }
+    th, td { border: 1px solid #000; padding: 6px; }
+    th { background: #eee; }
   </style>
 </head>
 <body>
 
 <h2>Input Arsip Dinamis</h2>
 
-<!-- FORM INPUT -->
+<!-- FORM -->
 <input id="noBerkas" placeholder="No. Berkas">
-
-<br>
-
 <select id="kodeMaster">
-  <option value="">-- Pilih Kode Klasifikasi Master --</option>
+  <option value="">-- Pilih Kode Master --</option>
   <option value="PR">PR</option>
   <option value="TU">TU</option>
 </select>
-
-<br>
-
-<input id="kodeKlasifikasi" placeholder="Kode Klasifikasi (PR.03.02.a dll)">
+<input id="kodeKlasifikasi" placeholder="Kode Klasifikasi">
 <input id="indeks1" placeholder="Indeks 1">
 <input id="indeks2" placeholder="Indeks 2">
-
 <input id="nomorSurat" placeholder="Nomor Surat Tugas">
 <input id="diberikanKepada" placeholder="Diberikan Kepada">
 <input id="tanggalSurat" type="date">
-
-<select id="tingkatPerkembangan">
-  <option value="">-- Pilih Tingkat Perkembangan --</option>
-  <option value="Asli">Asli</option>
-  <option value="Tembusan">Tembusan</option>
-  <option value="Salinan">Salinan</option>
-</select>
+<input id="tingkatPerkembangan" placeholder="Tingkat Perkembangan">
+<input id="jumlah" placeholder="Jumlah">
+<input id="unitPengolah" placeholder="Unit Pengolah Arsip">
+<input id="retensiAktif" placeholder="Retensi Aktif">
+<input id="retensiInaktif" placeholder="Retensi Inaktif">
+<input id="statusAkhir" placeholder="Status Akhir Arsip">
+<input id="noRak" placeholder="No Rak">
+<input id="noBox" placeholder="No Box">
+<input id="noFolder" placeholder="No Folder">
+<input id="keterangan" placeholder="Keterangan">
 
 <br><br>
-
 <button onclick="simpanData()">Simpan Data</button>
 
-<!-- TABEL HASIL -->
+<!-- TABEL -->
 <table>
-  <thead>
-    <tr>
-      <th>No. Berkas</th>
-      <th>Kode Master</th>
-      <th>Kode Klasifikasi</th>
-      <th>Indeks 1</th>
-      <th>Indeks 2</th>
-      <th>Nomor Surat Tugas</th>
-      <th>Diberikan Kepada</th>
-      <th>Tanggal Surat</th>
-      <th>Tingkat Perkembangan</th>
-    </tr>
-  </thead>
-  <tbody id="tabelData"></tbody>
+<thead>
+<tr>
+  <th>No Berkas</th>
+  <th>Kode Master</th>
+  <th>Kode Klasifikasi</th>
+  <th>Indeks 1</th>
+  <th>Indeks 2</th>
+  <th>Nomor Surat</th>
+  <th>Diberikan Kepada</th>
+  <th>Tanggal</th>
+  <th>Tingkat Perkembangan</th>
+  <th>Jumlah</th>
+  <th>Unit Pengolah</th>
+  <th>Retensi Aktif</th>
+  <th>Retensi Inaktif</th>
+  <th>Status Akhir</th>
+  <th>No Rak</th>
+  <th>No Box</th>
+  <th>No Folder</th>
+  <th>Keterangan</th>
+</tr>
+</thead>
+<tbody id="tabelData"></tbody>
 </table>
 
 <script src="script.js"></script>
