--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <style>
     body { font-family: Arial, sans-serif; font-size: 14px; padding: 20px; }
     input, select, button { width: 300px; padding: 6px; margin: 5px 0; }
+    button { cursor: pointer; }
     table { border-collapse: collapse; margin-top: 20px; width: 100%; font-size: 12px; }
     th, td { border: 1px solid #000; padding: 6px; }
     th { background: #eee; }
@@ -41,9 +42,10 @@
 
 <br><br>
 <button onclick="simpanData()">Simpan Data</button>
+<button onclick="exportCSV()">Export CSV</button>
 
 <!-- TABEL -->
-<table>
+<table id="tabel">
 <thead>
 <tr>
   <th>No Berkas</th>
