--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <input id="keterangan" placeholder="Keterangan">
 
 <br><br>
-<button onclick="simpanData()">Simpan Data</button>
+<button id="btnSimpan" onclick="simpanData()">Simpan Data</button>
 <button onclick="exportCSV()">Export CSV</button>
 
 <!-- TABEL -->
@@ -66,6 +66,7 @@
   <th>No Box</th>
   <th>No Folder</th>
   <th>Keterangan</th>
+  <th>Aksi</th>
 </tr>
 </thead>
 <tbody id="tabelData"></tbody>
