--- a/index.html
+++ b/index.html
@@ -5,46 +5,90 @@
   <title>Input Arsip Dinamis</title>
   <style>
     body { font-family: Arial, sans-serif; font-size: 14px; padding: 20px; }
-    input, select, button { width: 300px; padding: 6px; margin: 5px 0; }
-    button { cursor: pointer; }
+    input, select, button { width: 320px; padding: 6px; margin: 5px 0; }
     table { border-collapse: collapse; margin-top: 20px; width: 100%; font-size: 12px; }
     th, td { border: 1px solid #000; padding: 6px; }
     th { background: #eee; }
+    button { cursor: pointer; }
   </style>
 </head>
 <body>
 
 <h2>Input Arsip Dinamis</h2>
 
-<!-- FORM -->
-<input id="noBerkas" placeholder="No. Berkas">
+<input id="noBerkas" placeholder="No Berkas" readonly>
+
 <select id="kodeMaster">
-  <option value="">-- Pilih Kode Master --</option>
-  <option value="PR">PR</option>
-  <option value="TU">TU</option>
+  <option value="">-- Kode Master --</option>
+  <option>PR</option>
+  <option>TU</option>
 </select>
+
 <input id="kodeKlasifikasi" placeholder="Kode Klasifikasi">
-<input id="indeks1" placeholder="Indeks 1">
-<input id="indeks2" placeholder="Indeks 2">
-<input id="nomorSurat" placeholder="Nomor Surat Tugas">
+
+<select id="indeks1">
+  <option value="">-- Indeks 1 --</option>
+  <option>Surat Tugas</option>
+  <option>Nota Dinas</option>
+  <option>Surat Masuk</option>
+  <option>Surat Keluar</option>
+  <option>Laporan</option>
+  <option>Berita Acara</option>
+  <option>Berkas Arsip Aktif Unit Kerja</option>
+  <option>Berkas Arsip Non Aktif Unit Kerja</option>
+</select>
+
+<select id="indeks2">
+  <option value="">-- Indeks 2 --</option>
+  <option>Sekretariat</option>
+  <option>Tata Usaha</option>
+  <option>Keuangan</option>
+  <option>Program & Berita</option>
+  <option>Konten Media Baru</option>
+  <option>Pengembangan Usaha</option>
+  <option>Teknik Transmisi</option>
+  <option>Teknik Studio</option>
+  <option>Umum Bagian SDM</option>
+  <option>Umum Bagian BMN</option>
+</select>
+
+<input id="nomorSurat" placeholder="Nomor Surat Tugas" readonly>
 <input id="diberikanKepada" placeholder="Diberikan Kepada">
 <input id="tanggalSurat" type="date">
-<input id="tingkatPerkembangan" placeholder="Tingkat Perkembangan">
+<input id="tingkatPerkembangan" value="Asli / Copy" readonly>
 <input id="jumlah" placeholder="Jumlah">
-<input id="unitPengolah" placeholder="Unit Pengolah Arsip">
+
+<select id="unitPengolah">
+  <option value="">-- Unit Pengolah Arsip --</option>
+  <option>Sekretariat</option>
+  <option>Tata Usaha</option>
+  <option>Keuangan</option>
+  <option>Program & Berita</option>
+  <option>Konten Media Baru</option>
+  <option>Pengembangan Usaha</option>
+  <option>Teknik Transmisi</option>
+  <option>Teknik Studio</option>
+  <option>Umum Bagian SDM</option>
+  <option>Umum Bagian BMN</option>
+</select>
+
 <input id="retensiAktif" placeholder="Retensi Aktif">
 <input id="retensiInaktif" placeholder="Retensi Inaktif">
-<input id="statusAkhir" placeholder="Status Akhir Arsip">
+<input id="statusAkhir" placeholder="Status Akhir">
 <input id="noRak" placeholder="No Rak">
 <input id="noBox" placeholder="No Box">
 <input id="noFolder" placeholder="No Folder">
-<input id="keterangan" placeholder="Keterangan">
+
+<select id="keterangan">
+  <option value="">-- Keterangan --</option>
+  <option>Baik</option>
+  <option>Rusak</option>
+</select>
 
 <br><br>
 <button id="btnSimpan" onclick="simpanData()">Simpan Data</button>
 <button onclick="exportCSV()">Export CSV</button>
 
-<!-- TABEL -->
 <table id="tabel">
 <thead>
 <tr>
@@ -53,10 +97,10 @@
   <th>Kode Klasifikasi</th>
   <th>Indeks 1</th>
   <th>Indeks 2</th>
-  <th>Nomor Surat</th>
+  <th>No Surat</th>
   <th>Diberikan Kepada</th>
   <th>Tanggal</th>
-  <th>Tingkat Perkembangan</th>
+  <th>Tingkat</th>
   <th>Jumlah</th>
   <th>Unit Pengolah</th>
   <th>Retensi Aktif</th>
