--- a/index.html
+++ b/index.html
@@ -4,57 +4,15 @@
   <meta charset="UTF-8">
   <title>Daftar Isi Berkas Arsip</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      padding: 20px;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 5px;
-    }
-
-    h3 {
-      text-align: center;
-      margin-top: 0;
-      margin-bottom: 30px;
-      font-weight: normal;
-    }
-
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 10px;
-    }
-
-    input, select {
-      width: 400px;
-      padding: 6px;
-      margin-top: 5px;
-    }
-
-    button {
-      margin-top: 15px;
-      padding: 8px 16px;
-      cursor: pointer;
-    }
-
-    table {
-      border-collapse: collapse;
-      margin-top: 30px;
-      width: 100%;
-      font-size: 12px;
-    }
-
-    th, td {
-      border: 1px solid #000;
-      padding: 6px;
-    }
-
-    th {
-      background: #eee;
-    }
+    body { font-family: Arial, sans-serif; font-size: 14px; padding: 20px; }
+    h2, h3 { text-align: center; margin: 0; }
+    h3 { margin-bottom: 25px; font-weight: normal; }
+    label { font-weight: bold; display: block; margin-top: 10px; }
+    input, select { width: 420px; padding: 6px; margin-top: 5px; }
+    button { margin-top: 15px; padding: 8px 16px; cursor: pointer; }
+    table { border-collapse: collapse; margin-top: 30px; width: 100%; font-size: 12px; }
+    th, td { border: 1px solid #000; padding: 6px; }
+    th { background: #eee; }
   </style>
 </head>
 <body>
@@ -62,7 +20,6 @@
 <h2>DAFTAR ISI BERKAS ARSIP AKTIF/INAKTIF</h2>
 <h3>TVRI STASIUN SUMATERA BARAT</h3>
 
-<!-- UNIT PENGOLAH DI ATAS -->
 <label>Unit Pengolah Arsip</label>
 <select id="unitPengolah">
   <option value="">-- Pilih Unit Pengolah --</option>
@@ -80,7 +37,6 @@
 
 <hr>
 
-<!-- FORM -->
 <label>No Berkas</label>
 <input id="noBerkas" readonly>
 
@@ -120,11 +76,8 @@
   <option>Umum Bagian BMN</option>
 </select>
 
-<label>Nomor Surat Tugas</label>
-<input id="nomorSurat" readonly>
-
-<label>Diberikan Kepada</label>
-<input id="diberikanKepada">
+<label>Uraian Informasi</label>
+<input id="uraianInformasi">
 
 <label>Tanggal</label>
 <input id="tanggalSurat" type="date">
@@ -166,7 +119,6 @@
 <button id="btnSimpan" onclick="simpanData()">Simpan Data</button>
 <button onclick="exportCSV()">Export CSV</button>
 
-<!-- TABEL -->
 <table id="tabel">
 <thead>
 <tr>
@@ -175,8 +127,7 @@
   <th>Kode Klasifikasi</th>
   <th>Indeks 1</th>
   <th>Indeks 2</th>
-  <th>No Surat</th>
-  <th>Diberikan Kepada</th>
+  <th>Uraian Informasi</th>
   <th>Tanggal</th>
   <th>Tingkat</th>
   <th>Jumlah</th>
