--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
 </thead>
 <tbody id="tabelData"></tbody>
 </table>
-
+  
+<script src="data.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
+
