--- a/index.html
+++ b/index.html
@@ -4,43 +4,15 @@
   <meta charset="UTF-8">
   <title>DAFTAR ISI BERKAS ARSIP</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 4px;
-    }
-    button {
-      margin-top: 15px;
-      padding: 10px 20px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 30px;
-    }
-    table, th, td {
-      border: 1px solid #000;
-    }
-    th, td {
-      padding: 6px;
-      text-align: left;
-    }
-    th {
-      background: #eee;
-    }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    h1 { text-align: center; }
+    label { display: block; margin-top: 10px; font-weight: bold; }
+    input, select, textarea { width: 100%; padding: 8px; margin-top: 4px; }
+    button { margin-top: 15px; padding: 10px 20px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 30px; }
+    table, th, td { border: 1px solid #000; }
+    th, td { padding: 6px; }
+    th { background: #eee; }
   </style>
 </head>
 
@@ -48,7 +20,6 @@
 
 <h1>DAFTAR ISI BERKAS ARSIP AKTIF / INAKTIF<br>TVRI STASIUN SUMATERA BARAT</h1>
 
-<!-- UNIT PENGOLAH -->
 <label>Unit Pengolah Arsip</label>
 <select id="unitPengolah">
   <option value="">-- Pilih Unit --</option>
@@ -64,9 +35,6 @@
   <option>Umum Bagian BMN</option>
 </select>
 
-<hr>
-
-<!-- FORM INPUT -->
 <label>No. Berkas</label>
 <input type="number" id="noBerkas">
 
@@ -101,15 +69,14 @@
 
 <button onclick="simpanData()">Simpan</button>
 
-<!-- TABEL HASIL -->
 <table>
   <thead>
     <tr>
       <th>No</th>
       <th>Unit</th>
       <th>No Berkas</th>
-      <th>Kode Klasifikasi</th>
-      <th>Uraian Informasi</th>
+      <th>Kode</th>
+      <th>Uraian</th>
       <th>Retensi Aktif</th>
       <th>Retensi Inaktif</th>
       <th>Nasib Akhir</th>
@@ -120,7 +87,6 @@
   <tbody id="tabelData"></tbody>
 </table>
 
-<!-- SCRIPT -->
 <script src="data.js"></script>
 <script src="script.js"></script>
 
