--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>DAFTAR ISI BERKAS ARSIP</title>
+  <meta charset="UTF-8" />
+  <title>Daftar Isi Arsip</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     h1 { text-align: center; }
-    label { display: block; margin-top: 10px; font-weight: bold; }
-    input, select, textarea { width: 100%; padding: 8px; margin-top: 4px; }
-    button { margin-top: 15px; padding: 10px 20px; }
-    table { width: 100%; border-collapse: collapse; margin-top: 30px; }
-    table, th, td { border: 1px solid #000; }
-    th, td { padding: 6px; }
+    label { font-weight: bold; display: block; margin-top: 10px; }
+    select, input, textarea, button { width: 100%; padding: 6px; margin-top: 4px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #999; padding: 6px; text-align: left; }
     th { background: #eee; }
+    .edit-btn { cursor: pointer; color: blue; text-decoration: underline; }
   </style>
 </head>
-
 <body>
 
-<h1>DAFTAR ISI BERKAS ARSIP AKTIF / INAKTIF<br>TVRI STASIUN SUMATERA BARAT</h1>
+<h1>DAFTAR ISI BERKAS ARSIP AKTIF/INAKTIF TVRI STASIUN SUMATERA BARAT</h1>
 
 <label>Unit Pengolah Arsip</label>
-<select id="unitPengolah">
+<select id="unitSelect">
   <option value="">-- Pilih Unit --</option>
   <option>Sekretariat</option>
   <option>Tata Usaha</option>
@@ -35,31 +33,34 @@
   <option>Umum Bagian BMN</option>
 </select>
 
+<hr>
+
 <label>No. Berkas</label>
-<input type="number" id="noBerkas">
+<input id="noBerkas" disabled />
+
+<label>Indeks 1</label>
+<select id="indeks1">
+  <option>Surat Tugas</option>
+  <option>Nota Dinas</option>
+  <option>Surat Masuk</option>
+  <option>Surat Keluar</option>
+  <option>Laporan</option>
+  <option>Berita Acara</option>
+  <option>Berkas Arsip Aktif Unit Kerja</option>
+  <option>Berkas Arsip Non Aktif Unit Kerja</option>
+</select>
+
+<label>Indeks 2</label>
+<input id="indeks2" />
 
 <label>Kode Klasifikasi</label>
-<select id="kodeKlasifikasi">
-  <option value="">-- Pilih Kode Klasifikasi --</option>
-</select>
+<input id="kodeKlasifikasi" placeholder="manual dulu (Tahap 2 otomatis)" />
+
+<label>Tingkat Perkembangan</label>
+<input value="Asli / Copy" disabled />
 
 <label>Uraian Informasi</label>
 <textarea id="uraian"></textarea>
-
-<label>Retensi Aktif</label>
-<input type="text" id="retensiAktif" readonly>
-
-<label>Retensi Inaktif</label>
-<input type="text" id="retensiInaktif" readonly>
-
-<label>Nasib Akhir</label>
-<input type="text" id="nasibAkhir" readonly>
-
-<label>Sistem Klasifikasi Keamanan dan Akses Arsip Dinamis</label>
-<input type="text" id="keamananAkses" readonly>
-
-<label>Tingkat Perkembangan</label>
-<input type="text" value="Asli / Copy" readonly>
 
 <label>Keterangan</label>
 <select id="keterangan">
@@ -67,28 +68,25 @@
   <option>Rusak</option>
 </select>
 
-<button onclick="simpanData()">Simpan</button>
+<button onclick="simpan()">Simpan</button>
+<button onclick="exportCSV()">Export CSV (Unit Ini)</button>
 
 <table>
   <thead>
     <tr>
       <th>No</th>
-      <th>Unit</th>
-      <th>No Berkas</th>
-      <th>Kode</th>
+      <th>Indeks 1</th>
+      <th>Indeks 2</th>
+      <th>Kode Klasifikasi</th>
+      <th>Tingkat</th>
       <th>Uraian</th>
-      <th>Retensi Aktif</th>
-      <th>Retensi Inaktif</th>
-      <th>Nasib Akhir</th>
-      <th>Keamanan</th>
       <th>Keterangan</th>
+      <th>Edit</th>
     </tr>
   </thead>
   <tbody id="tabelData"></tbody>
 </table>
 
-<script src="data.js"></script>
 <script src="script.js"></script>
-
 </body>
 </html>
