--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <form id="formArsip">
   <label>No Berkas</label><br>
-  <input type="text" id="noBerkas"><br><br>
+  <input type="number" id="noBerkas"readonly><br><br>
 
   <label>Uraian Informasi</label><br>
   <input type="text" id="uraian"><br><br>
@@ -37,3 +37,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
