--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <h2>DAFTAR ISI BERKAS ARSIP</h2>
 
 <form id="formArsip">
-  <label>No Berkas</label><br>
- <input type="text" id="noBerkas" readonly>
+<label>No Berkas</label><br>
+<input type="text" id="noBerkas" readonly><br><br>
 
-  <label>Uraian Informasi</label><br>
-  <input type="text" id="uraian"><br><br>
+<label>Uraian Informasi</label><br>
+<input type="text" id="uraian"><br><br>
 
-  <label>Keterangan</label><br>
-  <input type="text" id="keterangan"><br><br>
+<label>Keterangan</label><br>
+<input type="text" id="keterangan"><br><br>
 
-  <button type="submit">Simpan</button>
+<button type="submit">Simpan</button>
+
 </form>
 
 <hr>
@@ -37,5 +38,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
