--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <form id="formArsip">
 <label>No Berkas</label><br>
 <input type="text" id="noBerkas" readonly><br><br>
+  
+<label>Indeks 1</label><br>
+<input type="text" id="indeks1"><br><br>
 
 <label>Uraian Informasi</label><br>
 <input type="text" id="uraian"><br><br>
@@ -38,6 +41,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
