--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <tr>
       <th>No Berkas</th>
       <th>Uraian</th>
+      <th>Indeks 1</th>
       <th>Keterangan</th>
     </tr>
   </thead>
@@ -41,6 +42,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
