--- a/index.html
+++ b/index.html
@@ -2,27 +2,26 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Daftar Arsip</title>
+  <title>DAFTAR ISI BERKAS ARSIP</title>
 </head>
 <body>
 
-<h2>DAFTAR ISI BERKAS ARSIP</h2>
+<h1>DAFTAR ISI BERKAS ARSIP</h1>
 
 <form id="formArsip">
-<label>No Berkas</label><br>
-<input type="text" id="noBerkas" readonly><br><br>
-  
-<label>Indeks 1</label><br>
-<input type="text" id="indeks1"><br><br>
+  <label>No Berkas</label><br>
+  <input type="text" id="noBerkas" readonly><br><br>
 
-<label>Uraian Informasi</label><br>
-<input type="text" id="uraian"><br><br>
+  <label>Uraian Informasi</label><br>
+  <input type="text" id="uraian"><br><br>
 
-<label>Keterangan</label><br>
-<input type="text" id="keterangan"><br><br>
+  <label>Indeks 1</label><br>
+  <input type="text" id="indeks1"><br><br>
 
-<button type="submit">Simpan</button>
+  <label>Keterangan</label><br>
+  <input type="text" id="keterangan"><br><br>
 
+  <button type="submit">Simpan</button>
 </form>
 
 <hr>
@@ -31,7 +30,7 @@
   <thead>
     <tr>
       <th>No Berkas</th>
-      <th>Uraian</th>
+      <th>Uraian Informasi</th>
       <th>Indeks 1</th>
       <th>Keterangan</th>
     </tr>
@@ -42,8 +41,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
