--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   <label>Indeks 1</label><br>
   <input type="text" id="indeks1"><br><br>
+  
+  <label>Indeks 2</label><br>
+  <input type="text" id="indeks2"><br><br>
 
   <label>Keterangan</label><br>
   <input type="text" id="keterangan"><br><br>
@@ -32,6 +35,7 @@
       <th>No Berkas</th>
       <th>Uraian Informasi</th>
       <th>Indeks 1</th>
+      <th>Indeks 2</th>
       <th>Keterangan</th>
     </tr>
   </thead>
@@ -41,3 +45,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
