--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <form id="formArsip">
   <label>No Berkas</label><br>
   <input type="text" id="noBerkas" readonly><br><br>
+  
+  <label>Kode Klasifikasi</label><br>
+  <input type="text" id="kodeKlasifikasi"><br><br>
 
   <label>Uraian Informasi</label><br>
   <input type="text" id="uraian"><br><br>
@@ -33,6 +36,7 @@
   <thead>
     <tr>
       <th>No Berkas</th>
+      <th>Kode Klasifikasi</th>
       <th>Uraian Informasi</th>
       <th>Indeks 1</th>
       <th>Indeks 2</th>
@@ -45,4 +49,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
