--- a/index.html
+++ b/index.html
@@ -2,44 +2,100 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>DAFTAR ISI BERKAS ARSIP</title>
+  <title>Daftar Isi Berkas Arsip</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    label { font-weight: bold; }
+    input { width: 100%; margin-bottom: 10px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #000; padding: 5px; text-align: left; }
+    button { padding: 8px 16px; }
+  </style>
 </head>
 <body>
 
-<h1>DAFTAR ISI BERKAS ARSIP</h1>
+<h2>DAFTAR ISI BERKAS ARSIP AKTIF / INAKTIF  
+TVRI STASIUN SUMATERA BARAT</h2>
 
 <form id="formArsip">
-  <label>No Berkas</label><br>
-  <input type="text" id="noBerkas" readonly><br><br>
-  
-  <label>Kode Klasifikasi</label><br>
-  <input type="text" id="kodeKlasifikasi"><br><br>
 
-  <label>Uraian Informasi</label><br>
-  <input type="text" id="uraian"><br><br>
+  <label>No. Berkas</label>
+  <input type="number" id="noBerkas" readonly>
 
-  <label>Indeks 1</label><br>
-  <input type="text" id="indeks1"><br><br>
-  
-  <label>Indeks 2</label><br>
-  <input type="text" id="indeks2"><br><br>
+  <label>Kode Klasifikasi</label>
+  <input type="text" id="kodeKlasifikasi">
 
-  <label>Keterangan</label><br>
-  <input type="text" id="keterangan"><br><br>
+  <label>Indeks 1</label>
+  <input type="text" id="indeks1">
+
+  <label>Indeks 2</label>
+  <input type="text" id="indeks2">
+
+  <label>No. Item Arsip</label>
+  <input type="text" id="noItem">
+
+  <label>Uraian Informasi</label>
+  <input type="text" id="uraian">
+
+  <label>Tanggal</label>
+  <input type="date" id="tanggal">
+
+  <label>Tingkat Perkembangan</label>
+  <input type="text" id="tingkat">
+
+  <label>Jumlah</label>
+  <input type="text" id="jumlah">
+
+  <label>Unit Pengolah Arsip</label>
+  <input type="text" id="unit">
+
+  <label>Retensi Aktif</label>
+  <input type="text" id="retensiAktif">
+
+  <label>Retensi Inaktif</label>
+  <input type="text" id="retensiInaktif">
+
+  <label>Status Akhir Arsip</label>
+  <input type="text" id="statusAkhir">
+
+  <label>Sistem Klasifikasi Keamanan & Akses Arsip</label>
+  <input type="text" id="keamanan">
+
+  <label>No. Rak</label>
+  <input type="text" id="rak">
+
+  <label>No. Box</label>
+  <input type="text" id="box">
+
+  <label>No. Folder</label>
+  <input type="text" id="folder">
+
+  <label>Keterangan</label>
+  <input type="text" id="keterangan">
 
   <button type="submit">Simpan</button>
 </form>
 
-<hr>
-
-<table border="1">
+<table>
   <thead>
     <tr>
-      <th>No Berkas</th>
+      <th>No. Berkas</th>
       <th>Kode Klasifikasi</th>
-      <th>Uraian Informasi</th>
       <th>Indeks 1</th>
       <th>Indeks 2</th>
+      <th>No. Item</th>
+      <th>Uraian</th>
+      <th>Tanggal</th>
+      <th>Tingkat</th>
+      <th>Jumlah</th>
+      <th>Unit</th>
+      <th>Retensi Aktif</th>
+      <th>Retensi Inaktif</th>
+      <th>Status Akhir</th>
+      <th>Keamanan</th>
+      <th>Rak</th>
+      <th>Box</th>
+      <th>Folder</th>
       <th>Keterangan</th>
     </tr>
   </thead>
@@ -49,5 +105,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
