--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ TVRI STASIUN SUMATERA BARAT</h2>
       <th>Box</th>
       <th>Folder</th>
       <th>Keterangan</th>
+      <th>Aksi</th>
+
     </tr>
   </thead>
   <tbody id="tabelData"></tbody>
@@ -105,3 +107,4 @@ TVRI STASIUN SUMATERA BARAT</h2>
 <script src="script.js"></script>
 </body>
 </html>
+
