--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
 <table>
   <thead>
     <tr>
-      <th>No</th>
-      <th>Kode</th>
+      <th>No Item</th>
+      <th>Kode Klasifikasi</th>
       <th>Indeks 1</th>
       <th>Indeks 2</th>
       <th>No Item</th>
-      <th>Uraian</th>
+      <th>Uraian Informasi</th>
       <th>Tanggal</th>
-      <th>Tingkat</th>
+      <th>Tingkat Perkembangan</th>
       <th>Jumlah</th>
-      <th>Unit</th>
-      <th>Aktif</th>
-      <th>Inaktif</th>
-      <th>Status</th>
-      <th>Keamanan</th>
+      <th>Unit Pengolah</th>
+      <th>Retensi Arsip Aktif</th>
+      <th>Retensi Arsip Inaktif</th>
+      <th>Nasib Akhir Arsip</th>
+      <th>Sistem Klasifikasi Keamanan dan Akses Arsip Dinamis</th>
       <th>Rak</th>
       <th>Box</th>
       <th>Folder</th>
@@ -105,3 +105,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
