--- a/index.html
+++ b/index.html
@@ -23,7 +23,22 @@
   <input type="text" id="kodeKlasifikasi">
 
   <label>Indeks 1</label>
-  <input type="text" id="indeks1">
+<select id="indeks1">
+  <option value="">-- Pilih --</option>
+  <option>Surat Tugas</option>
+  <option>Nota Dinas</option>
+  <option>Surat Masuk</option>
+  <option>Surat Keluar</option>
+  <option>Laporan</option>
+  <option>Berita Acara</option>
+  <option>Berkas Arsip Aktif Unit Kerja</option>
+  <option>Berkas Arsip Non Aktif Unit Kerja</option>
+  <option>Pengumuman</option>
+  <option>Surat Keputusan</option>
+  <option>Surat Perintah</option>
+  <option>Surat Edaran</option>
+</select>
+
 
   <label>Indeks 2</label>
   <input type="text" id="indeks2">
@@ -105,4 +120,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
